#8 fixed stack docs

--- a/content/docs/components/stack/usage.mdx
+++ b/content/docs/components/stack/usage.mdx
@@ -56,7 +56,7 @@ Stack accepts a `spacing` prop with a valid css value. This prop adds a margin
 to each child of the Stack element except for the last child.
 
 ```jsx
-<Stack col spacing='2'>
+<Stack col spacing='1rem'>
 	<Alert variant='solid' status='success' alertTitle='Download'>
 		Successful!
 	</Alert>
