--- a/content/docs/components/alert-dialog/usage.mdx
+++ b/content/docs/components/alert-dialog/usage.mdx
@@ -25,12 +25,12 @@ Nature UI exports 7 alert dialog related components.
 
 ```js
 import {
-	AlertDialog,
-	AlertDialogBody,
-	AlertDialogFooter,
-	AlertDialogHeader,
-	AlertDialogContent,
-	AlertDialogOverlay,
+  AlertDialog,
+  AlertDialogBody,
+  AlertDialogFooter,
+  AlertDialogHeader,
+  AlertDialogContent,
+  AlertDialogOverlay,
 } from '@nature-ui/core';
 ```
 
@@ -45,38 +45,38 @@ to prevent users from accidentally confirming the destructive action.
 
 ```jsx
 function AlertDialogExample() {
-	const [isOpen, setIsOpen] = React.useState(false);
-	const onOpen = () => setIsOpen(true);
-	const onClose = () => setIsOpen(false);
-	const cancelRef = React.useRef();
+  const [isOpen, setIsOpen] = React.useState(false);
+  const onOpen = () => setIsOpen(true);
+  const onClose = () => setIsOpen(false);
+  const cancelRef = React.useRef();
 
-	return (
-		<>
-			<Button onClick={onOpen}>Delete something</Button>
-			<AlertDialog
-				variant='blur'
-				isOpen={isOpen}
-				onClose={onClose}
-				title='Please confirm'
-				isCentered
-				footer={
-					<>
-						<Button
-							onClick={onClose}
-							className='mr-3 bg-gray-200 text-gray-700 hover:bg-gray-300'
-						>
-							Nevermind
-						</Button>
-						<Button className='hover:bg-red-600 bg-red-500'>Yes, delete</Button>
-					</>
-				}
-			>
-				Are you sure you want to delete something? This action is permanent, and
-				we're totally not just flipping a field called "deleted" to "true" in
-				our database, we're actually deleting something.
-			</AlertDialog>
-		</>
-	);
+  return (
+    <>
+      <Button onClick={onOpen}>Delete something</Button>
+      <AlertDialog
+        variant="blur"
+        isOpen={isOpen}
+        onClose={onClose}
+        title="Please confirm"
+        isCentered
+        footer={
+          <>
+            <Button
+              onClick={onClose}
+              className="mr-3 bg-gray-200 text-gray-700 hover:bg-gray-300"
+            >
+              Nevermind
+            </Button>
+            <Button className="hover:bg-red-600 bg-red-500">Yes, delete</Button>
+          </>
+        }
+      >
+        Are you sure you want to delete something? This action is permanent, and
+        we're totally not just flipping a field called "deleted" to "true" in
+        our database, we're actually deleting something.
+      </AlertDialog>
+    </>
+  );
 }
 ```
 
@@ -92,35 +92,35 @@ passing a `motionPreset` prop, and set its value to either `slideInBottom`,
 
 ```jsx
 function TransitionExample() {
-	const { isOpen, onOpen, onClose } = useDisclosure();
+  const { isOpen, onOpen, onClose } = useDisclosure();
 
-	return (
-		<>
-			<Button onClick={onOpen}>Discard</Button>
+  return (
+    <>
+      <Button onClick={onOpen}>Discard</Button>
 
-			<AlertDialog
-				variant='blur'
-				isOpen={isOpen}
-				onClose={onClose}
-				title='Discard Changes'
-				isCentered
-				footer={
-					<>
-						<Button
-							onClick={onClose}
-							className='mr-3 bg-gray-200 text-gray-700 hover:bg-gray-300'
-						>
-							Cancel
-						</Button>
-						<Button className='hover:bg-red-600 bg-red-500'>Save</Button>
-					</>
-				}
-			>
-				Are you sure you want to discard all of your notes? 44 words will be
-				deleted.
-			</AlertDialog>
-		</>
-	);
+      <AlertDialog
+        variant="blur"
+        isOpen={isOpen}
+        onClose={onClose}
+        title="Discard Changes"
+        isCentered
+        footer={
+          <>
+            <Button
+              onClick={onClose}
+              className="mr-3 bg-gray-200 text-gray-700 hover:bg-gray-300"
+            >
+              Cancel
+            </Button>
+            <Button className="hover:bg-red-600 bg-red-500">Save</Button>
+          </>
+        }
+      >
+        Are you sure you want to discard all of your notes? 44 words will be
+        deleted.
+      </AlertDialog>
+    </>
+  );
 }
 ```
 
