alert dialog component

--- a/content/docs/components/badge/usage.mdx
+++ b/content/docs/components/badge/usage.mdx
@@ -26,10 +26,10 @@ Pass the `color` prop to customize the color of the Badge. `color` can be any
 
 ```jsx
 <Stack row>
-	<Badge className='bg-teal-200 text-teal-700'>Success</Badge>
-	<Badge className='bg-red-300 text-red-700'>Removed</Badge>
-	<Badge className='bg-primary-300 text-primary-700'>Nature ui</Badge>
-	<Badge className='bg-orange-300 text-orange-700'>New</Badge>
+  <Badge className="bg-teal-200 text-teal-700">Success</Badge>
+  <Badge className="bg-red-300 text-red-700">Removed</Badge>
+  <Badge className="bg-primary-300 text-primary-700">Nature ui</Badge>
+  <Badge className="bg-orange-300 text-orange-700">New</Badge>
 </Stack>
 ```
 
@@ -39,29 +39,29 @@ You can style a badge to your taste using tailwindcss. Here are a few example `v
 
 ```jsx
 <Stack row>
-	{/* outline */}
-	<Badge className='border border-primary-600 text-primary-600'>Default</Badge>
+  {/* outline */}
+  <Badge className="border border-primary-600 text-primary-600">Default</Badge>
 
-	{/* Solid */}
-	<Badge className='bg-primary-500 text-white'>Success</Badge>
+  {/* Solid */}
+  <Badge className="bg-primary-500 text-white">Success</Badge>
 
-	{/* Subtle */}
-	<Badge className='bg-primary-200 text-primary-700'>Removed</Badge>
+  {/* Subtle */}
+  <Badge className="bg-primary-200 text-primary-700">Removed</Badge>
 </Stack>
 ```
 
 ## Composition
 
 ```jsx
-<Box className='flex'>
-	<Avatar src='https://tinyurl.com/y4mmkc9v' />
-	<Box className='ml-3'>
-		<p className='font-bold'>
-			Divine Nature
-			<Badge className='ml-1 bg-primary-200 text-primary-700'>New</Badge>
-		</p>
-		<p className='text-sm'>Software Engineer</p>
-	</Box>
+<Box className="flex">
+  <Avatar src="https://tinyurl.com/y4mmkc9v" />
+  <Box className="ml-3">
+    <p className="font-bold">
+      Divine Nature
+      <Badge className="ml-1 bg-primary-200 text-primary-700">New</Badge>
+    </p>
+    <p className="text-sm">Software Engineer</p>
+  </Box>
 </Box>
 ```
 
