--- a/content/docs/components/alert/usage.mdx
+++ b/content/docs/components/alert/usage.mdx
@@ -20,27 +20,27 @@ Nature UI exports 5 alert related components.
 
 ```js
 import {
-	Alert,
-	AlertWrapper,
-	AlertTitle,
-	AlertDescription,
-	AlertIcon,
+  Alert,
+  AlertWrapper,
+  AlertTitle,
+  AlertDescription,
+  AlertIcon,
 } from '@nature-ui/core';
 ```
 
 ## Usage
 
 ```jsx
-<Alert status='error'>Data uploaded to the server. Fire on!</Alert>
+<Alert status="error">Data uploaded to the server. Fire on!</Alert>
 ```
 
 ## Advanced Usage
 
 ```jsx
-<AlertWrapper variant='solid' status='error' className='rounded-md'>
-	<AlertIcon />
-	<AlertTitle className='mr-3'>Outdated</AlertTitle>
-	<AlertDescription>Your experience may be degraded!</AlertDescription>
+<AlertWrapper variant="solid" status="error" className="rounded-md">
+  <AlertIcon />
+  <AlertTitle className="mr-3">Outdated</AlertTitle>
+  <AlertDescription>Your experience may be degraded!</AlertDescription>
 </AlertWrapper>
 ```
 
@@ -52,12 +52,12 @@ color scheme and icon used. Alert supports `error`, `success`, `warning` and
 
 ```jsx
 <Stack col>
-	<Alert status='success'>Data uploaded to the server. Fire on!</Alert>
-	<Alert status='error'>Data uploaded to the server. Fire on!</Alert>
-	<Alert status='warning'>
-		Seems your account is about expire, upgrade now
-	</Alert>
-	<Alert status='info'>Nature UI V2 is coming soon!</Alert>
+  <Alert status="success">Data uploaded to the server. Fire on!</Alert>
+  <Alert status="error">Data uploaded to the server. Fire on!</Alert>
+  <Alert status="warning">
+    Seems your account is about expire, upgrade now
+  </Alert>
+  <Alert status="info">Nature UI V2 is coming soon!</Alert>
 </Stack>
 ```
 
@@ -68,18 +68,18 @@ color scheme and icon used. Alert supports `error`, `success`, `warning` and
 
 ```jsx
 <Stack col>
-	<Alert variant='subtle' status='success'>
-		Data uploaded to the server. Fire on!
-	</Alert>
-	<Alert variant='solid' status='success'>
-		Data uploaded to the server. Fire on!
-	</Alert>
-	<Alert variant='left-accent' status='success'>
-		Data uploaded to the server. Fire on!
-	</Alert>
-	<Alert variant='top-accent' status='success'>
-		Data uploaded to the server. Fire on!
-	</Alert>
+  <Alert variant="subtle" status="success">
+    Data uploaded to the server. Fire on!
+  </Alert>
+  <Alert variant="solid" status="success">
+    Data uploaded to the server. Fire on!
+  </Alert>
+  <Alert variant="left-accent" status="success">
+    Data uploaded to the server. Fire on!
+  </Alert>
+  <Alert variant="top-accent" status="success">
+    Data uploaded to the server. Fire on!
+  </Alert>
 </Stack>
 ```
 
@@ -90,15 +90,15 @@ kinds of layouts. Here's an example of a custom alert style and layout:
 
 ```jsx
 <AlertWrapper
-	status='success'
-	variant='subtle'
-	className='flex-col items-center justify-center text-center h-48'
+  status="success"
+  variant="subtle"
+  className="flex-col items-center justify-center text-center h-48"
 >
-	<AlertIcon boxSize='40px' className={'mr-0'} />
-	<AlertTitle className='mt-4 mb-1 text-lg'>Application submitted!</AlertTitle>
-	<AlertDescription className='max-w-sm'>
-		Thanks for submitting your application. Our team will get back to you soon.
-	</AlertDescription>
+  <AlertIcon boxSize="40px" className={'mr-0'} />
+  <AlertTitle className="mt-4 mb-1 text-lg">Application submitted!</AlertTitle>
+  <AlertDescription className="max-w-sm">
+    Thanks for submitting your application. Our team will get back to you soon.
+  </AlertDescription>
 </AlertWrapper>
 ```
 
@@ -106,16 +106,16 @@ kinds of layouts. Here's an example of a custom alert style and layout:
 alert with wrapping description text:
 
 ```jsx
-<AlertWrapper status='success'>
-	<AlertIcon />
-	<Box className='flex-1'>
-		<AlertTitle>Success!</AlertTitle>
-		<AlertDescription className='block'>
-			Your application has been received. We will review your application and
-			respond within the next 48 hours.
-		</AlertDescription>
-	</Box>
-	<CloseButton className='absolute right-3 top-3' />
+<AlertWrapper status="success">
+  <AlertIcon />
+  <Box className="flex-1">
+    <AlertTitle>Success!</AlertTitle>
+    <AlertDescription className="block">
+      Your application has been received. We will review your application and
+      respond within the next 48 hours.
+    </AlertDescription>
+  </Box>
+  <CloseButton className="absolute right-3 top-3" />
 </AlertWrapper>
 ```
 
