--- a/content/docs/components/close-button/usage.mdx
+++ b/content/docs/components/close-button/usage.mdx
@@ -2,7 +2,7 @@
 id: close-button
 category: form
 title: CloseButton
-package: '@nature-ui/close-button'
+package: "@nature-ui/close-button"
 description:
   CloseButton is essentially a button with a close icon. It is used to handle
   the close functionality in feedback and overlay components like Alerts,
@@ -12,7 +12,7 @@ description:
 ## Import
 
 ```js
-import { CloseButton } from '@nature-ui/core';
+import { CloseButton } from "@nature-ui/core";
 ```
 
 ## Usage
@@ -27,10 +27,10 @@ Pass the `size` prop to adjust the size of the close button. Values can be `sm`,
 `md` or `lg`.
 
 ```jsx
-<Stack row spacing='1rem'>
-	<CloseButton size='sm' />
-	<CloseButton size='md' />
-	<CloseButton size='lg' />
+<Stack row spacing="1rem">
+  <CloseButton size="sm" />
+  <CloseButton size="md" />
+  <CloseButton size="lg" />
 </Stack>
 ```
 
