--- a/content/docs/components/icon-button/usage.mdx
+++ b/content/docs/components/icon-button/usage.mdx
@@ -2,7 +2,7 @@
 id: icon-button
 category: form
 title: Icon Button
-package: '@nature-ui/button'
+package: "@nature-ui/button"
 description: Icon button renders an icon within in a button
 ---
 
@@ -16,11 +16,11 @@ screen readers can give meaning to the button.
 ### Import
 
 ```js
-import { IconButton } from '@nature-ui/core';
+import { IconButton } from "@nature-ui/core";
 ```
 
 ```jsx
-<IconButton aria-label='Search database' icon={<SearchIcon />} />
+<IconButton aria-label="Search database" icon={<SearchIcon />} />
 ```
 
 ### Button Colors
@@ -30,9 +30,9 @@ component, so we can use `color` prop to change the color of the button.
 
 ```jsx
 <IconButton
-	className='bg-blue-700 text-white'
-	aria-label='Search database'
-	icon={<SearchIcon />}
+  className="bg-blue-700 text-white"
+  aria-label="Search database"
+  icon={<SearchIcon />}
 />
 ```
 
@@ -43,10 +43,10 @@ button.
 
 ```jsx
 <IconButton
-	className='bg-purple-600 text-white'
-	aria-label='Call Segun'
-	size='lg'
-	icon={<PhoneIcon />}
+  className="bg-purple-600 text-white"
+  aria-label="Call Segun"
+  size="lg"
+  icon={<PhoneIcon />}
 />
 ```
 
@@ -57,10 +57,10 @@ button.
 
 ```jsx
 <IconButton
-	variant='outline'
-	className='text-orange-500'
-	aria-label='Send email'
-	icon={<EmailIcon />}
+  variant="outline"
+  className="text-orange-500"
+  aria-label="Send email"
+  icon={<EmailIcon />}
 />
 ```
 
@@ -72,13 +72,13 @@ the button.
 
 ```jsx
 <IconButton
-	variant='outline'
-	className='text-teal-600'
-	aria-label='Call Divine'
-	css={{
-		fontSize: '20px',
-	}}
-	icon={<MdPhone />}
+  variant="outline"
+  className="text-teal-600"
+  aria-label="Call Divine"
+  css={{
+    fontSize: "20px",
+  }}
+  icon={<MdPhone />}
 />
 ```
 
