--- a/content/docs/components/spinner/usage.mdx
+++ b/content/docs/components/spinner/usage.mdx
@@ -2,7 +2,7 @@
 id: spinner
 category: feedback
 title: Spinner
-package: '@nature-ui/spinner'
+package: "@nature-ui/spinner"
 description:
   Spinners provide a visual cue that an action is processing awaiting a course
   of change or a result.
@@ -11,7 +11,7 @@ description:
 ## Import
 
 ```js
-import { Spinner } from '@nature-ui/core';
+import { Spinner } from "@nature-ui/core";
 ```
 
 ## Usage
@@ -23,16 +23,16 @@ import { Spinner } from '@nature-ui/core';
 ### Spinner with Color
 
 ```jsx
-<Spinner color='red-500' />
+<Spinner color="red-500" />
 ```
 
 ### Spinner with different size
 
 ```jsx
 <Stack row>
-	<Spinner size='2rem' />
-	<Spinner size='3rem' />
-	<Spinner size='4rem' />
+  <Spinner size="2rem" />
+  <Spinner size="3rem" />
+  <Spinner size="4rem" />
 </Stack>
 ```
 
@@ -40,11 +40,11 @@ import { Spinner } from '@nature-ui/core';
 
 ```jsx
 <Spinner
-	thickness='4px'
-	speed='0.65s'
-	color='blue-500'
-	size='3rem'
-	emptyColor='var(--primary-200)'
+  thickness="4px"
+  speed="0.65s"
+  color="blue-500"
+  size="3rem"
+  emptyColor="var(--primary-200)"
 />
 ```
 
