--- a/content/docs/components/circular-progress/usage.mdx
+++ b/content/docs/components/circular-progress/usage.mdx
@@ -2,7 +2,7 @@
 id: circular-progress
 category: feedback
 title: Circular Progress
-package: '@nature-ui/progress'
+package: "@nature-ui/progress"
 description:
   Circular Progress is used to indicates the progress for determinate and
   indeterminate processes.
@@ -16,7 +16,7 @@ description:
 ## Import
 
 ```js
-import { CircularProgress } from '@nature-ui/core';
+import { CircularProgress } from "@nature-ui/core";
 ```
 
 ## Usage
@@ -31,7 +31,7 @@ You can add `size` prop to the progress bar to add a custom size.
 
 ```jsx
 // Change the size to 120px
-<CircularProgress value={30} size='120px' />
+<CircularProgress value={30} size="120px" />
 ```
 
 ### Changing the thickness
@@ -41,7 +41,7 @@ You can add the `thickness` prop to update the thickness of the progress ring.
 > The thickness has to be a ratio of the size. Value should be between 0 and 1.
 
 ```jsx
-<CircularProgress value={59} size='100px' thickness='4px' />
+<CircularProgress value={59} size="100px" thickness="4px" />
 ```
 
 ### Changing the color
@@ -50,7 +50,7 @@ You can add `colorScheme` prop to any progress bar to apply any color that
 exists in the theme config file.
 
 ```jsx
-<CircularProgress value={30} colorScheme='orange-400' thickness='12px' />
+<CircularProgress value={30} colorScheme="orange-400" thickness="12px" />
 ```
 
 ### Adding label
@@ -58,7 +58,7 @@ exists in the theme config file.
 You can add `label` prop to any progress bar to include a label text.
 
 ```jsx
-<CircularProgress label='40%' value={40} colorScheme='green-400' size='50px' />
+<CircularProgress label="40%" value={40} colorScheme="green-400" size="50px" />
 ```
 
 ### Indeterminate Progress
@@ -67,7 +67,7 @@ Setting the progress to indeterminate means you're not able to determine the
 `value` upfront. Pass the `isIndeterminate` prop to activate this state.
 
 ```jsx
-<CircularProgress isIndeterminate colorScheme='green-300' />
+<CircularProgress isIndeterminate colorScheme="green-300" />
 ```
 
 ### Accessibility
