--- a/content/docs/components/container/usage.mdx
+++ b/content/docs/components/container/usage.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Container'
-package: '@nature-ui/layout'
-image: 'components/container.svg'
+title: "Container"
+package: "@nature-ui/layout"
+image: "components/container.svg"
 description:
   Containers are the most basic layout element in Nature UI. It is used to
   constrain the maximum of the content it wraps.
@@ -13,7 +13,7 @@ of a component.
 ## Import
 
 ```js
-import { Container } from '@nature-ui/core';
+import { Container } from "@nature-ui/core";
 ```
 
 ## Usage
@@ -22,10 +22,10 @@ To contain any piece of content, wrap it in the `Container` component.
 
 ```jsx
 <Container>
-	There are many benefits to a joint design and development system. Not only
-	does it bring benefits to the design team, but it also brings benefits to
-	engineering teams. It makes sure that our experiences have a consistent look
-	and feel, not just in our design specs, but in production
+  There are many benefits to a joint design and development system. Not only
+  does it bring benefits to the design team, but it also brings benefits to
+  engineering teams. It makes sure that our experiences have a consistent look
+  and feel, not just in our design specs, but in production
 </Container>
 ```
 
@@ -35,9 +35,9 @@ The `size` prop accepts one of `xs`, `sm`, `md`, `lg`, `xl` or any valid css
 width property value.
 
 ```jsx
-<Container size='sm' centered>
-	There are many benefits to a joint design and development system. Not only
-	does it bring benefits to the design team...
+<Container size="sm" centered>
+  There are many benefits to a joint design and development system. Not only
+  does it bring benefits to the design team...
 </Container>
 ```
 
