--- a/content/docs/components/input/usage.mdx
+++ b/content/docs/components/input/usage.mdx
@@ -2,14 +2,14 @@
 id: input
 category: form
 title: Input
-package: '@nature-ui/input'
+package: "@nature-ui/input"
 description: The `Input` component is a component that is used to get user input in a text field.
 ---
 
 ## Import
 
 ```js
-import { Input } from '@nature-ui/core';
+import { Input } from "@nature-ui/core";
 ```
 
 ## Usage
@@ -17,7 +17,7 @@ import { Input } from '@nature-ui/core';
 Here's a basic usage example of the `Input` component:
 
 ```jsx
-<Input placeholder='Basic usage' />
+<Input placeholder="Basic usage" />
 ```
 
 ### Changing the size of the Input
@@ -30,9 +30,9 @@ The `Input` component comes in four sizes. The default is `md`.
 
 ```jsx
 <Stack col>
-	<Input placeholder='small size' size='sm' />
-	<Input placeholder='medium size' size='md' />
-	<Input placeholder='large size' size='lg' />
+  <Input placeholder="small size" size="sm" />
+  <Input placeholder="medium size" size="md" />
+  <Input placeholder="large size" size="lg" />
 </Stack>
 ```
 
@@ -43,10 +43,10 @@ The input component comes in 4 variants: `outline`, `unstyled`, `flushed`, and
 
 ```jsx
 <Stack col>
-	<Input variant='outline' placeholder='Outline' />
-	<Input variant='filled' placeholder='Filled' />
-	<Input variant='flushed' placeholder='Flushed' />
-	<Input variant='unstyled' placeholder='Unstyled' />
+  <Input variant="outline" placeholder="Outline" />
+  <Input variant="filled" placeholder="Filled" />
+  <Input variant="flushed" placeholder="Flushed" />
+  <Input variant="unstyled" placeholder="Unstyled" />
 </Stack>
 ```
 
@@ -57,19 +57,19 @@ right of the input element.
 
 ```jsx
 <Stack col>
-	<Input
-		placeholder='your-website'
-		defaultValue='divinehycenth'
-		addonLeft='https://'
-		addonRight='.com'
-	/>
+  <Input
+    placeholder="your-website"
+    defaultValue="divinehycenth"
+    addonLeft="https://"
+    addonRight=".com"
+  />
 
-	<Input
-		placeholder='Phone number...'
-		type='number'
-		addonLeft='+234'
-		size='sm'
-	/>
+  <Input
+    placeholder="Phone number..."
+    type="number"
+    addonLeft="+234"
+    size="sm"
+  />
 </Stack>
 ```
 
@@ -77,18 +77,18 @@ right of the input element.
 
 ```jsx
 <Stack col>
-	<Input
-		placeholder='Phone number'
-		type='tel'
-		addonLeft={<PhoneIcon className='text-gray-400' />}
-	/>
+  <Input
+    placeholder="Phone number"
+    type="tel"
+    addonLeft={<PhoneIcon className="text-gray-400" />}
+  />
 
-	<Input
-		placeholder='Enter amount'
-		type='number'
-		addonLeft='$'
-		addonRight={<CheckIcon color='green' />}
-	/>
+  <Input
+    placeholder="Enter amount"
+    type="number"
+    addonLeft="$"
+    addonRight={<CheckIcon color="green" />}
+  />
 </Stack>
 ```
 
@@ -96,20 +96,20 @@ right of the input element.
 
 ```jsx
 function PasswordInput() {
-	const [show, setShow] = React.useState(false);
-	const handleClick = () => setShow(!show);
+  const [show, setShow] = React.useState(false);
+  const handleClick = () => setShow(!show);
 
-	return (
-		<Input
-			placeholder='Enter password'
-			type={show ? 'text' : 'password'}
-			addonRight={
-				<button variant='link' onClick={handleClick}>
-					{show ? 'Hide' : 'Show'}
-				</button>
-			}
-		/>
-	);
+  return (
+    <Input
+      placeholder="Enter password"
+      type={show ? "text" : "password"}
+      addonRight={
+        <button variant="link" onClick={handleClick}>
+          {show ? "Hide" : "Show"}
+        </button>
+      }
+    />
+  );
 }
 ```
 
@@ -117,19 +117,19 @@ function PasswordInput() {
 
 ```jsx
 function Example() {
-	const [value, setValue] = React.useState('Starting...');
-	const handleChange = (event) => setValue(event.target.value);
+  const [value, setValue] = React.useState("Starting...");
+  const handleChange = (event) => setValue(event.target.value);
 
-	return (
-		<>
-			<Input
-				value={value}
-				onChange={handleChange}
-				placeholder='Controlled input'
-			/>
-			<pre>{JSON.stringify(value, null, 2)}</pre>
-		</>
-	);
+  return (
+    <>
+      <Input
+        value={value}
+        onChange={handleChange}
+        placeholder="Controlled input"
+      />
+      <pre>{JSON.stringify(value, null, 2)}</pre>
+    </>
+  );
 }
 ```
 
