#64 lazy-image component

--- a/content/docs/components/visually-hidden/usage.mdx
+++ b/content/docs/components/visually-hidden/usage.mdx
@@ -2,7 +2,7 @@
 id: visually-hidden
 category: disclosure
 title: VisuallyHidden
-package: '@nature-ui/visually-hidden'
+package: "@nature-ui/visually-hidden"
 description:
   VisuallyHidden is a common technique used in web accessibility to hide content
   from the visual client
@@ -14,19 +14,19 @@ from the visual client, but keep it readable for screen readers.
 ## Import
 
 ```js
-import { VisuallyHidden } from '@nature-ui/core';
+import { VisuallyHidden } from "@nature-ui/core";
 ```
 
 ## Usage
 
 ```jsx
 function Example() {
-	return (
-		<Button>
-			<VisuallyHidden>Checkmark</VisuallyHidden>
-			<CheckIcon />
-		</Button>
-	);
+  return (
+    <Button>
+      <VisuallyHidden>Checkmark</VisuallyHidden>
+      <CheckIcon />
+    </Button>
+  );
 }
 ```
 
@@ -34,12 +34,12 @@ Another Example
 
 ```jsx
 function Example() {
-	return (
-		<Box>
-			<h1>Title and description</h1>
-			<VisuallyHidden>This will be hidden</VisuallyHidden>
-		</Box>
-	);
+  return (
+    <Box>
+      <h1>Title and description</h1>
+      <VisuallyHidden>This will be hidden</VisuallyHidden>
+    </Box>
+  );
 }
 ```
 
